--- a/docs/dissertation/el398_dissertation.tex
+++ b/docs/dissertation/el398_dissertation.tex
@@ -751,12 +751,12 @@ The two algorithms---the original and my modification---are compared against eac
 
 \section{Testing}
 
-In addition to manual testing, unit tests were written to verify that implemented parts did not break during further development (regression testing). Components of the system were tested independently though their public interfaces. I used Google Test framework, a go-to testing solution for C++, to implement small and maintainable tests.
+In addition to manual testing, unit tests were written to verify that implemented parts still function correctly during further development (regression testing). Components of the system were tested independently though their public interfaces. I used Google Test framework, a mainstream testing solution for C++, to implement small and maintainable tests.
 
 Unit tests cover:
 \begin{itemize}
-\item Encrypted file access --- ensure data is correctly encrypted and decrypted during reads and writes. Tests use NIST-recommended AES-CTR test vectors\footnote{\url{http://csrc.nist.gov/publications/nistpubs/800-38a/sp800-38a.pdf}, Appendix F, Sect. 5.5}.
-\item Embedding algorithms --- ensure they correctly modify and extract data from motion vectors. Tests cover both typical and edge cases for each algorithm.
+\item Encrypted file access --- ensure that data is correctly encrypted and decrypted during reads and writes, when necessary. Tests use NIST-recommended AES-CTR test vectors\footnote{\url{http://csrc.nist.gov/publications/nistpubs/800-38a/sp800-38a.pdf}, Appendix F, Sect. 5.5}.
+\item Embedding algorithms --- ensure algorithms correctly modify and extract data from motion vectors. Tests cover both typical and edge cases for each algorithm.
 \item C API --- ensure the whole steganography library can be successfully used though the API. Tests initialise the library, simulate FFmpeg calls and verify the results. 
 \end{itemize}
 
@@ -768,7 +768,7 @@ This chapter described the design and the implementation details of the steganog
 \cleardoublepage
 \chapter{Evaluation}
 
-\textit{This chapter evaluates the software against the initial requirements and presents more embedding detectability results. In particular, detectability properties of Xu's algorithm, accuracy of the reversion technique classifier and effectiveness of varying the embedding capacity are covered. I also discuss secondary properties of steganographic systems, such as the embedding capacity and speed.
+\textit{This chapter evaluates the software against the initial requirements and presents more steganalytic results. In particular, detectability properties of Xu's algorithm, accuracy of the reversion technique classifier and effectiveness of varying the embedding capacity are covered. I also discuss secondary properties of steganographic systems, such as the embedding capacity and speed.
 }
 
 \section{Satisfaction of requirements}
@@ -777,9 +777,7 @@ Overall, the project was a success, and all requirements described in sections \
 
 \subsection{Steganographic Application}
 
-The developed steganography software is able to reliably modify and extract motion vector data from MPEG video files. I avoided the need to implement my own video codec by successfully integrating the encoder and decoder applications with FFmpeg, as discussed in section \ref{integrate-ffmpeg}.
-
-Deliverables are split into three parts: encoder and decoder applications for the end user to perform embedding, and a steganography library that can be used separately though an API. The library implements 8 LSB embedding algorithms; the full discussion on their properties was presented in section \ref{emb-alg}. The payload can be encrypted with 256-bit AES--CTR encryption using a user-supplied password. 
+The developed steganography software is able to reliably modify and extract motion vector data from MPEG video files. I avoided the need to implement my own video codec by successfully integrating it with FFmpeg, as discussed in section \ref{integrate-ffmpeg}. The software consists of 3 deliverables: encoder and decoder applications for the user to perform embedding, and a steganography library that can be used separately though an API. The library implements 8 LSB embedding algorithms; the full discussion on their properties was presented in section \ref{emb-alg}. The payload can be encrypted with 256-bit AES--CTR encryption using a user-supplied password. 
 
 \subsection{Steganalysis Suite}
 
@@ -791,7 +789,7 @@ The steganalysis suite provides facilities to extract and process motion vector 
 \item \texttt{lsbplane}, \texttt{plot2d} --- extraction and visualisation of the LSB plane;
 \item \texttt{aggregateIntoBytes}, \texttt{seqbytes} --- grouping extracted bits into bytes;
 \item \texttt{mvhist} --- histogram pre-set up to view motion vector data;
-\item \texttt{chiSquareAttack} --- embedding probability in the first 1-100\% of the data;
+\item \texttt{chiSquareAttack} --- compute the embedding probability in the first 1-100\% of the data;
 \item \texttt{patternSearch} --- the most likely locations of the pattern in the data;
 \item \texttt{known-attacks/} --- a collection of examples how to attack implemented algorithms;
 \item \texttt{*svmtraining} --- a collection of the reversion technique SVM training scripts.
@@ -803,14 +801,14 @@ Exact implementation details are discussed in section \ref{steg-tech}, and the e
 \section{Detectability of embedding algorithms}
 \label{rem-detect-eval}
 
-Perhaps the most important aspect to consider when evaluating a steganography system is the detectability of embedding. Most of the detectability evaluation was done in the previous chapter to justify further algorithm design improvements, which also allowed to evaluate how effective implemented steganalysis techniques are. This section covers remaining evaluation.
+Perhaps the most important aspect to consider when evaluating a steganographic system is detectability of the embedding. Most of the detectability evaluation was done in the previous chapter to justify further algorithm design improvements, which also allowed to evaluate how effective implemented steganalysis techniques are. This section covers remaining steganalysis.
 
 \subsection{Detecting Xu's algorithm's embedding}
 \label{breaking-xu}
 
-As previously discussed in section \ref{xu-alg}, Xu's algorithm makes some questionable design choices, which led me to developing a different version of the algorithm (which I called \texttt{MVSteg}). To justify this change, let us see how those original decisions affect detectability of the embedding produced by Xu's algorithm.
+As previously discussed in section \ref{xu-alg}, Xu's algorithm makes some questionable design choices, which led me to developing a different version of the algorithm (which I called \texttt{MVSteg}). To justify this, let us see how those original decisions affect detectability of the embedding produced by Xu's algorithm.
 
-One of such decisions is choosing whether to embed into the $x$ or $y$ component based on the phase of the motion vector. Xu's algorithm will embed into the $x$ component if the phase is an acute angle, and into the $y$ component otherwise, claiming it results in less disturbance to the motion. However, if, for example, a motion vector consists of a large $y$ component and a small $x$ component, incrementing the small $x$ component (as the selection policy suggests) would result in more relative disturbance to the motion, so the motivation behind such criteria is unclear.
+One of such decisions is choosing whether to embed into the $x$ or $y$ component based on the phase of the motion vector. Xu's algorithm will embed into the $x$ component if the phase is an acute angle, and into the $y$ component otherwise, claiming it results in less disturbance to the motion. However, if, for example, a motion vector consists of a large $y$ component and a small $x$ component (phase is an acute angle), incrementing the small $x$ component would result in more relative disturbance to the motion, so the motivation behind such decision is unclear.
 
 \begin{figure}[tbh]
 \centerline{
@@ -835,7 +833,7 @@ Figure \ref{fig:xualg-mvsteg-visual} shows how, perhaps due to this selection po
 \label{fig:4xembed}
 \end{wrapfigure}
 
-Authors of the algorithm suggest embedding the same chunk of data four times at different locations to increase resilience against possible data corruption. To guide the decoding process, locations are stored an I-frame using classic image steganography methods. This, however, implies that LSBs of used motion vectors will have a recurring pattern, so I simulated this embedding together with some bit corruptions in an attempt to find such repetition. Figure \ref{fig:4xembed} shows a successful result of finding a similar pattern at four locations, with peaks corresponding to positions where the pattern matched the recovered string in the best way: the sum of squared differences between a pattern and the recovered string is close to zero. \texttt{MVSteg} is not vulnerable to this, since it embeds data once.
+Authors of the algorithm suggest embedding the same chunk of data four times at different locations to increase resilience against possible data corruption. To guide the decoding process, locations are stored an I-frame using classical image steganography methods. This, however, implies that LSBs of used motion vectors will have a recurring pattern, so I simulated this embedding together with some bit corruptions in an attempt to find such repetition. Figure \ref{fig:4xembed} shows a successful result of finding a similar pattern at four locations, with peaks corresponding to positions where the pattern closely matches the recovered string: the sum of squared differences between a pattern and the recovered string is close to zero. \texttt{MVSteg} is not vulnerable to this, since it embeds data once.
 
 \begin{wrapfigure}{R}{8cm}
 \begingroup
@@ -850,7 +848,7 @@ Authors of the algorithm suggest embedding the same chunk of data four times at 
 \label{fig:vlc-corruption}
 \end{wrapfigure}
 
-Another interesting decision made by the algorithm is to modify motion vector components by incrementing them. This introduces a special case when motion vector points to the edge of the frame, so incrementing it would make it point beyond the edge and hence invalid. If sufficient checks to prevent this not in place, it can give out the fact that the video has been tampered with. Figure \ref{fig:vlc-corruption} shows that such corruption can be reported by a media player. \texttt{MVSteg}'s embedding can't be detected this way because it decrements motion vector components in an F4 fashion, which also makes it resistant to $\chi^2$ and histogram attacks, described earlier in section \ref{steg-tech}.
+Another interesting decision made by the algorithm is to modify motion vector components by incrementing them. This introduces a special case when motion vector points to the edge of the frame, so incrementing it would make it point beyond the edge and hence invalid. If sufficient checks to prevent this not in place, it can give out the fact that the video has been tampered with. Figure \ref{fig:vlc-corruption} shows that such corruption can be reported by a media player. \texttt{MVSteg}'s embedding does not have this drawback because it decrements motion vector components in an F4 fashion, which also makes it resistant to $\chi^2$ and histogram attacks, described earlier in section \ref{steg-tech}.
 
 \subsection{Reversion Technique}
 \label{rev-tech}
@@ -859,16 +857,16 @@ As explained in section \ref{rev-tech-theory}, the reversion technique considers
 
 For each sequential (non-randomised) embedding algorithm, the training and evaluation is done as follows:
 \begin{itemize}
-\item To obtain ``original'' videos, Movest encoder is used to embed random data into the 28 stego videos at their full capacity. The remaining 28 non-stego videos are also passed though the encoder, but no data is embedded (dummy pass).
-\item To obtain transcoded videos, all original videos are passed through the encoder again, letting FFmpeg recompute motion vectors.
-\item Motion vectors are extracted from all videos.
+\item To generate the initial dataset of videos, Movest encoder is used to embed random data into the 28 stego videos at their full capacity. The remaining 28 non-stego videos are also passed though the encoder, but no data is embedded (dummy pass).
+\item To obtain transcoded videos, all previously created videos are passed through the encoder again, letting FFmpeg recompute motion vectors.
+\item Motion vectors are extracted from both sets of videos.
 \item Motion vector data is imported into Matlab and frequencies of SAD values are computed using steganalysis suite's \texttt{computeSadFreqs.m} function.
-\item Frequency data, together with a labelling whether it came from a stego or a non-stego video, is passed into Matlab's \texttt{fitcsvm} function to train a linear SVM.
-\item To estimate the classification accuracy, the system performs 100 runs of \emph{k-fold cross validation}~\cite{ai2-notes}, with $k = 8$, as explained below. This is a common technique of evaluating performance of classifiers and it is available in Matlab (\texttt{crossval}).
+\item Frequency data, together with a labelling whether it came from a stego or a non-stego video, is passed into Matlab's \texttt{fitcsvm} function to train an SVM.
+\item To estimate the classification accuracy, the system performs 100 runs of \emph{k-fold cross validation}~\cite{ai2-notes}, with $k = 8$, as explained below. This is a common technique of evaluating classifiers' performance and it is available in Matlab (\texttt{crossval}).
 
-\textbf{8-fold cross validation:} the data set is randomly partitioned into 8 bins (7 videos each), and the algorithm performs 8 iterations, selecting each bin in turn. On every iteration, remaining 7 bins are used to train the classifier and the selected bin is used to evaluate its accuracy\footnote{Using $k = 8$ allows having 7 videos in each bin.}. The accuracy result, averaged over 8 iterations, is reported back.
+\textbf{8-fold cross validation:} the data set is randomly partitioned into 8 bins (7 videos each), and the algorithm performs 8 iterations, selecting each bin in turn. On every iteration, remaining 7 bins are used to train the classifier and the selected bin is used to evaluate its accuracy\footnote{Using $k = 8$ (close to recommended $k = 10$) allows having 7 videos in each bin, making each iteration's result more granular.}. The accuracy result, averaged over 8 iterations, is reported back.
 
-Since the reported value depends on how favourable the random partitioning was, the system runs the 8-fold cross validation algorithm 100 times to obtain a narrow 95\% confidence interval for the mean accuracy.  
+The reported value depends on how favourable the random partitioning was, so the system runs the 8-fold cross validation algorithm 100 times to obtain a narrow 95\% confidence interval for the mean accuracy.  
 
 \end{itemize}
 
@@ -897,7 +895,7 @@ MVSteg & $62.96\% \pm 0.57\%$ \\
 \label{tbl:rev-tech}
 \end{table}
 
-The results are surprisingly good. My interpretation of the trend in the data is that the accuracy result against each algorithm appears to be similar to the proportion of motion vectors it modifies. 
+The results are surprisingly good. My interpretation of the trend in the data is that the accuracy result for each algorithm is similar to the proportion of motion vectors it modifies. 
 
 \subsection{Varying embedding capacity}
 \label{eval-var-emb-cap}
@@ -921,6 +919,9 @@ To evaluate how effective this approach is, I tested the $\chi^2$ attack and the
 20\% & 1/10 & 0/10   \\
 30\% & 1/10 & 0/10   \\
 40\% & 1/10 & 0/10   \\
+50\% & 4/10 & 0/10   \\
+60\% & 6/10 & 0/10   \\
+70\% & 7/10 & 0/10   \\
 \textit{100\%} & 9/10 & 10/10 \\
 \hline
 \end{tabular}
@@ -930,36 +931,35 @@ To evaluate how effective this approach is, I tested the $\chi^2$ attack and the
 \label{tbl:detect-outguess}
 \end{table}
 
-As we see from the data, the reversion technique classifier starts classifying more than 50\% of videos at XX\% capacity setting and $\chi^2$ attack is only effective starting at YY\%.
+As we see from the data, the reversion technique classifier starts being effective at 50--60\% capacity setting and $\chi^2$ attack is only effective starting at YY\%.
 
 \section{Detectability by humans (study)}
 \label{exp-human-subj}
 
 \subsection{Study hypothesis}
 
-A study was conducted to test whether human participants are able to distinguish
-between a stego and a non-stego video. To test this, I looked into the numbers of times the participants were right or wrong when asked to identify the stego video out of the three ostensibly identical videos. I hypothesise that humans are not able to tell videos apart (null hypothesis); this hypothesis will be rejected if the data supports the opposite claim to a statistically significant level.
+A study was conducted to test whether human participants are able to distinguish between a stego and a non-stego video when the prediction error is not modified. To test this, I looked into the numbers of times the participants were right or wrong when asked to identify the stego video out of the three ostensibly identical videos. I hypothesise that humans are not able to tell videos apart (null hypothesis); this hypothesis will be rejected if experimental data supports the opposite claim to a statistically significant level.
 
 \subsection{Experimental procedure}
 
-The experiment consisted of 10 trials. In each trial, the participant was given three ostensibly identical videos, each up to 30 seconds long, one of which has been modified to contain a hidden payload\footnote{Experiment description is the project proposal originally stated that 2 videos will be used. Using three videos and asking the participant to pick the odd one out eliminates the situation when the participant sees that videos are different, but is unable to tell which one actually contains embedding.}. They had to choose which video they thought was modified and write its letter (\textsb{A}, \textsb{B} or \textsb{C}) into the experiment answer sheet.
+The experiment consisted of 10 trials. In each trial, the participant was given three ostensibly identical videos, each up to 30 seconds long, one of which has been modified to contain a hidden payload\footnote{Experiment description is the project proposal originally stated that 2 videos will be used. However, this can introduce a problematic situation when the participant sees that videos are different, but is unable to tell which one actually contains embedding. Using three videos and asking to pick the odd one out eliminates this issue.}. They had to choose which video they thought was modified and write its letter (\textsb{A}, \textsb{B} or \textsb{C}) into the experiment answer sheet.
 
 To increase chances of successful detection and more closely simulate steganalysis, the following measures were taken:
 \begin{itemize}
-\item Test subjects were computer-literate students (most of them were fellow computer scientists).
+\item Test subjects were computer-literate students, most of them were fellow computer scientists.
 \item Embedding has been done using the Hide \& Seek algorithm, which leaves a significant footprint by modifying every motion vector. The full embedding capacity of every video was used up to embed random data.  
 \item Participants had full control over the playback, which meant they could watch videos however they liked: sequentially, side-by-side, repeatedly replay certain parts, inspect file sizes, zoom into certain regions of a video, use either their own or my screen \emph{etc.}
-\item First trial contained an artificially corrupted video (motion vectors were changed more drastically), to give participants an idea of what kind of visual footprint to expect. 
+\item First trial contained an artificially corrupted video (motion vectors were changed more drastically) to give participants an idea of what kind of visual footprint to expect. 
 \end{itemize} 
 
-As a precaution, videos given to the participants did not contain flashing images, were emotionally neutral, and free from distressful, disturbing, offensive or otherwise unsettling images. No personal data about the participants was collected.
+As a precaution, videos did not contain flashing images, were emotionally neutral, and free from distressful, disturbing, offensive or otherwise unsettling images. No personal data about the participants was collected.
 
 \subsection{Results}
 
-To be able to interpret the data, I define a theoretical model that would fit the experiment. Let $n$ be the number of answers that participants gave and $X_i$ ($i \in [1, n]$) denote whether an answer was correct, \emph{i.e.} $X_i = 1$ if a participant correctly picked out a stego video in a trial and 0 otherwise. If the null hypothesis holds, we expect answers to be just as good as random guesses. Therefore $X_i$'s can be modelled as random variables with $\mathbb{P}(X_i = 1) = 1/3$, or, in other words, $X_i$'s follow Bernoulli distribution with $p = 1/3$. 
+To be able to interpret the data, I defined a theoretical model that would fit the experiment. Let $n$ be the number of answers that participants gave and $X_i$ ($i \in [1, n]$) denote whether an answer was correct, \emph{i.e.} $X_i = 1$ if a participant correctly picked out a stego video in a trial and 0 otherwise. If the null hypothesis holds, participants' answers will be indistinguishable from random guesses. Therefore $X_i$'s can be modelled as random variables with $\mathbb{P}(X_i = 1) = 1/3$, or, in other words, $X_i$'s follow Bernoulli distribution with $p = 1/3$. 
 
-To consider the overall data, we compute the sum of all $X_i$: $Y = \sum^n_{i=1} X_i$. For sufficiently large $n$, $Y$ follows the Binomial distribution with parameters $(n, p)$~\cite[p.~53]{papoulis2002probability}. Then, by de Moivre--Laplace theorem, $Y$ can be approximated by the normal distribution with mean $np$ and variance $np(1-p)$~\cite[p.~105]{papoulis2002probability}. This allows us to put 95\% confidence bounds on the value of $Y$~\cite[p.~316--318]{ai2-notes}:
-\[ np - 1.96 \sqrt{np(1-p)}  < Y <  np + 1.96 \sqrt{np(1-p)} \]
+To consider the overall data, I compute the sum of all $X_i$: $Y = \sum^n_{i=1} X_i$. For sufficiently large $n$, $Y$ follows the Binomial distribution with parameters $(n, p)$~\cite[p.~53]{papoulis2002probability}. Then, by de Moivre--Laplace theorem, $Y$ can be approximated by the normal distribution with mean $np$ and variance $np(1-p)$~\cite[p.~105]{papoulis2002probability}. This allows us to put 95\% confidence bounds on the value of $Y$~\cite[p.~316--318]{ai2-notes}:
+\[ np - 1.96 \sqrt{np(1-p)}  \leq Y \leq  np + 1.96 \sqrt{np(1-p)} \]
 
 If $Y$, obtained from the data set, does not lie in this range, the null hypothesis can be rejected with 95\% confidence.
 
@@ -994,14 +994,14 @@ Participant \#12 & B & C & A & A & B & B & B & A & B & B \\
 \label{tbl:detect-exp-res}
 \end{table}
 
-% \footnote{One would normally want to have an order of magnitude more answers for the approximations to be more reliable, but it was not possible to recruit a sufficiently large number of qualified participants. It is worth noting that, according to the formula for $Y$, variance bounds will not get narrower as $n$ increases.}
-The data contains 108 answers ($n = \text{\# of participants} \times \text{\# of trials}$), so, according to the formula above, I expect $Y$ to be within the range $36 \pm 5$. The data has 32 correct answers, which is within that range, so it \emph{cannot} be concluded that humans \emph{are} able to identify implemented video steganography.
+\textbf{TODO: Comment on potentially small n?}
+The data contains 108 answers ($n = \text{\# of participants} \times \text{\# of trials}$), so, according to the formula above, I expect $Y$ to be within the range $36 \pm 5$. The data has 32 correct answers, which is within that range, so it \emph{cannot} be concluded that humans \emph{are} able to identify implemented video steganography. This means that the visual footprint, left in as a result of not modifying prediction error, is not noticeable.
 
 \section{Embedding capacity and speed}
 
-A steganographic system also has secondary characteristics worthy of noting: the embedding capacity and embedding speed. As previously mentioned in \ref{mv-emb-space}, embedding capacity depends on the number of P-frames, number of macroblocks (defined by the resolution) and the number of suitable motion vectors. The proportion of suitable motion vectors can vary significantly depending on the type of motion a video exhibits and what algorithm is used: for example, \texttt{MVSteg} will perform worse on videos with little or slow motion, because it only embeds into long motion vectors. 
+A steganographic system also has secondary characteristics worth of evaluating: the embedding capacity and embedding speed. As previously mentioned in \ref{mv-emb-space}, embedding capacity depends on the number of P-frames, number of macroblocks (defined by the resolution) and the number of suitable motion vectors. The proportion of suitable motion vectors can vary significantly depending on the type of motion a video exhibits and what algorithm is used: for example, \texttt{MVSteg} will perform worse on videos with little or slow motion, because it only embeds into long motion vectors. 
 
-To give an estimate of what embedding capacities a user might reasonably expect, I measured embedding capacities per second on a dataset of 53 HD ($1280 \times 720$) videos with various degrees of motion, averaged over the first 15 seconds. Figure \ref{fig:capacities} presents a box plot of measured capacities for each embedding algorithm: Hide \& Seek achieves an impressive 20~KB/s median embedding capacity; MSteg's, F3's and F4's median result is 6--8~KB/s, and Xu's algorithm and MVSteg have the lowest values of 1~KB/s. 
+To give an estimate of what embedding capacities a user might reasonably expect, I measured capacities per second on a dataset of 53 HD ($1280 \times 720$) videos with various degrees of motion, averaged over the first 15 seconds. Figure \ref{fig:capacities} presents a box plot of measured capacities for each embedding algorithm: Hide \& Seek achieves an impressive 20~KB/s median embedding capacity; MSteg's, F3's and F4's median result is 6--8~KB/s, and Xu's algorithm and MVSteg have the lowest values of 1~KB/s. 
 
 \begin{figure}[tbh]
 \centerline{\includegraphics{img/capacities.eps}}
@@ -1009,9 +1009,11 @@ To give an estimate of what embedding capacities a user might reasonably expect,
 \label{fig:capacities}
 \end{figure}
 
-   
+Encoding the video is the most computationally expensive part of the Movest encoder, so the time taken by steganography routines is relatively negligible. I did not observe any significant decrease in the encoding speed, even when using payload encryption. The most noticeable slowdown in the encoder is the initialisation overhead of the Randomised Hide \& Seek algorithm to build the payload bit to MV component mapping (section \ref{rand-hidenseek}).
 
-Encoding the video is the most computationally expensive part of the Movest encoder, so the time taken by steganography routines is relatively negligible. I did not observe any significant decrease in the encoding speed, even when using payload encryption. The most noticeable slowdown in the encoder is the initialisation overhead of the Randomised Hide \& Seek algorithm to build the payload bit to MV component mapping (section \ref{rand-hidenseek}). \textbf{TODO: give measurements?}
+\bigskip\bigskip
+\subsection*{Summary}
+This chapter evaluated implemented software with respect to initial requirements, and covered detectability, capacity and speed properties of steganographic systems. The following chapter summarises the undertaken work and suggests ways for further improvement. 
 
 % Conclusions
 \cleardoublepage
